# system_mcp

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  server.py
.github/: copilot-instructions.md
.github/workflows/: build-extension.yml  prepare-release.yml  release-extension.yml
.scripts/: dev.ps1  run.ps1
examples/: call_tools.py
src/system_mcp/: __init__.py  __main__.py  server.py
src/system_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/system_mcp/win/: mouse.py  screenshot.py  uia.py  window.py
templates/: tasks.system-mcp.json
vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
wrappers/pypi/: README.md  pyproject.toml
